@@ -2,17 +2,23 @@
 
 language: c
 sudo: required
-dist: trusty
+dist: bionic
+
+jobs:
+  include:
+    - name: r-4.0
+      env: R_VERSION="4.0"
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   # add our launchpad repo which has (inter alia) r-cran-gettz
-  - sudo add-apt-repository -y ppa:edd/r-3.5
+  #- sudo add-apt-repository -y ppa:edd/r-4.0
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-bh r-cran-gettz r-cran-tinytest
-  
+  - ./run.sh install_aptget r-cran-rcpp r-cran-bh r-cran-tinytest
+  - ./run.sh install_r gettz
+
 script:
   - ./run.sh run_tests
 
