@@ -1,3 +1,7 @@
+2020-07-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to 'bionic' and R 4.0.*
+
 2020-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
